Added styles to ids and classes in style.css, and added getWinner() function to script.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Rock Paper Scissors</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="App/style.css">
     </head>
     <body>
         <div id="rpsGame">
@@ -15,8 +15,8 @@
 
             <button class="choiceBtn">ROCK</button>
             <button class="choiceBtn">PAPER</button>
-            <button class="choiceBtn">SCISSOR</button>
+            <button class="choiceBtn">SCISSORS</button>
         </div>
-        <script src="rps.js"></script> 
+        <script src="App/script.js"></script> 
     </body>
 </html>
